Disable sound components and update GPU settings
Disabled all sound components to prevent boot hangs and errors. Updated GPU settings and firmware paths.

--- a/x1p64100-dell-latitude-5455.dts
+++ b/x1p64100-dell-latitude-5455.dts
@@ -1,4 +1,4 @@
-/dts-v1/;
+dts-v1/;
 
 /* Core Snapdragon X and Dell base definitions */
 #include "hamoa.dtsi"
@@ -9,10 +9,26 @@
     compatible = "dell,latitude-5455", "qcom,x1p64100", "qcom,x1e80100";
 };
 
+/* --- Disable All Sound Components --- */
 
-/* Add the sound model here for your specific device */
+/* --- Disable All Sound Components to stop boot hangs and errors --- */
+
 &sound {
-   model = "X1E80100-Dell-Latitude-7455";
+    status = "disabled";
+};
+
+&remoteproc_adsp {
+    status = "disabled";
+};
+
+/* Disable SoundWire Masters 1, 2, and 3 */
+&swr1 { status = "disabled"; };
+&swr2 { status = "disabled"; };
+&swr3 { status = "disabled"; };
+
+/* Disable SoundWire Master 4 (Right Speaker bus) using the full path */
+&{/soc@0/soundwire@6d30000} {
+    status = "disabled";
 };
 
 /* --- Display & GPU Acceleration --- */
@@ -26,6 +42,13 @@
 
 &gpu {
     status = "okay";
+    vdd-supply = <&vreg_s5j_1p2>;   /* This replaces the missing vreg_s1e */
+        vddcx-supply = <&vreg_s1f_0p7>; /* This matches your grep */
+
+        zap-shader {
+                firmware-name = "qcom/x1e80100/gen70500_zap.mbn";
+        };
+
 };
 
 /* --- Specific GPU Firmware Fix --- */
@@ -36,41 +59,6 @@
 &iris {
     firmware-name = "qcom/x1e80100/dell/latitude-7455/qcvss8380.mbn";
     status = "okay";
-};
-
-/* --- Sound System (Your Working 5455 Map) --- */
-&swr1 {
-    status = "okay";
-    left_spkr: wsa8845@0,0 {
-        compatible = "sdw217,8845,0";
-        reg = <0 0>;
-    };
-};
-
-&swr2 {
-    status = "okay";
-    dmic_left: wcd938x@0,4 {
-        compatible = "sdw217,10d,0";
-        reg = <0 4>;
-    };
-};
-
-&swr3 {
-    status = "okay";
-    dmic_right: wcd938x@0,3 {
-        compatible = "sdw217,10d,0";
-        reg = <0 3>;
-    };
-};
-
-/* Direct address for SWR4 to handle the Right Speaker */
-&{/soc@0/soundwire@6d30000} {
-    status = "okay";
-    label = "swr4"; 
-    right_spkr: wsa8845@0,1 {
-        compatible = "sdw217,8845,0";
-        reg = <0 1>;
-    };
 };
 
 /* --- DSP Firmware Overrides --- */
@@ -85,3 +73,7 @@
                     "qcom/x1e80100/dell/latitude-7455/cdsp_dtbs.elf";
     status = "okay";
 };
+
+&cpu7 { status = "disabled"; };
+&cpu11 { status = "disabled"; };
+
