--- a/x1p64100-dell-latitude-5455.dts
+++ b/x1p64100-dell-latitude-5455.dts
@@ -1,33 +1,59 @@
-dts-v1/;
+/dts-v1/;
 
-/* Core Snapdragon X and Dell base definitions */
 #include "hamoa.dtsi"
 #include "x1-dell-thena.dtsi"
 
 / {
     model = "Dell Latitude 5455";
     compatible = "dell,latitude-5455", "qcom,x1p64100", "qcom,x1e80100";
+
+    /* --- 1. THE CPU MAP FIX --- */
+    /* Deleting the ghost cores from the power map is the #1 way to fix your fans */
+    cpus {
+        /delete-node/ cpu@10300; /* CPU7 */
+        /delete-node/ cpu@20300; /* CPU11 */
+
+        cpu-map {
+            cluster1 {
+                /delete-node/ core3; /* This is CPU7 on your 10-core chip */
+            };
+            cpu_map_cluster2: cluster2 {
+                /delete-node/ core3; /* This is CPU11 on your 10-core chip */
+            };
+        };
+    };
 };
 
-/* --- Disable All Sound Components --- */
 
-/* --- Disable All Sound Components to stop boot hangs and errors --- */
-
-&sound {
-    status = "disabled";
+/* --- 2. POWER & INTERCONNECT STABILITY --- */
+&rpmhpd {
+    status = "okay";
 };
 
-/* Disable SoundWire Masters 1, 2, and 3 */
-&swr1 { status = "disabled"; };
-&swr2 { status = "disabled"; };
-&swr3 { status = "disabled"; };
-
-/* Disable SoundWire Master 4 (Right Speaker bus) using the full path */
-&{/soc@0/soundwire@6d30000} {
-    status = "disabled";
+&gem_noc {
+    status = "okay";
 };
 
-/* --- Display & GPU Acceleration --- */
+&mc_virt {
+    status = "okay";
+};
+
+/* --- 3. GPU & FAN CONTROL --- */
+&gpu {
+    status = "okay";
+    vdd-supply = <&vreg_s5j_1p2>;
+    vddcx-supply = <&vreg_s1f_0p7>;
+
+    zap-shader {
+        firmware-name = "qcom/x1e80100/gen70500_zap.mbn";
+    };
+};
+
+&gpu_zap_shader {
+    firmware-name = "qcom/x1e80100/dell/latitude-7455/qcdxkmsuc8380.mbn";
+};
+
+/* --- 4. DISPLAY & VIDEO --- */
 &mdss {
     status = "okay";
 };
@@ -36,28 +62,12 @@ dts-v1/;
     status = "okay";
 };
 
-&gpu {
-    status = "okay";
-    vdd-supply = <&vreg_s5j_1p2>;   /* This replaces the missing vreg_s1e */
-        vddcx-supply = <&vreg_s1f_0p7>; /* This matches your grep */
-
-        zap-shader {
-                firmware-name = "qcom/x1e80100/gen70500_zap.mbn";
-        };
-
-};
-
-/* --- Specific GPU Firmware Fix --- */
-&gpu_zap_shader {
-    firmware-name = "qcom/x1e80100/dell/latitude-7455/qcdxkmsuc8380.mbn";
-};
-
 &iris {
     firmware-name = "qcom/x1e80100/dell/latitude-7455/qcvss8380.mbn";
     status = "okay";
 };
 
-/* --- DSP Firmware Overrides --- */
+/* --- 5. DSP & SOUND (Keep Disabled) --- */
 &remoteproc_adsp {
     firmware-name = "qcom/x1e80100/dell/latitude-7455/qcadsp8380.mbn",
                     "qcom/x1e80100/dell/latitude-7455/adsp_dtbs.elf";
@@ -70,6 +80,10 @@ dts-v1/;
     status = "okay";
 };
 
-&cpu7 { status = "disabled"; };
-&cpu11 { status = "disabled"; };
+&sound { status = "disabled"; };
+&swr1 { status = "disabled"; };
+&swr2 { status = "disabled"; };
+&swr3 { status = "disabled"; };
+&{/soc@0/soundwire@6d30000} { status = "disabled"; };
+
 
