Add video encoder/decoder support in device tree
Added video encoder/decoder configuration for hardware acceleration.

--- a/x1p64100-dell-latitude-5455.dts
+++ b/x1p64100-dell-latitude-5455.dts
@@ -70,3 +70,9 @@
 &sound {
     model = "X1E80100-Dell-Latitude-7455";
 };
+
+/* Video Encoder/Decoder (Hardware Video Acceleration) */
+&iris {
+    firmware-name = "qcom/x1e80100/dell/latitude-7455/qcvss8380.mbn";
+    status = "okay";
+};
